After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689315 - git: Fix compile warnings.
git: Fix compile warnings.
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: plugins: git
unspecified
Other All
: Normal normal
: ---
Assigned To: James Liggett
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-29 23:05 UTC by Carl-Anton Ingmarsson
Modified: 2012-12-01 22:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
git: Fix compile warnings. (8.87 KB, patch)
2012-11-29 23:05 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2012-11-29 23:05:02 UTC
See the attached patch.
Comment 1 Carl-Anton Ingmarsson 2012-11-29 23:05:04 UTC
Created attachment 230251 [details] [review]
git: Fix compile warnings.

Mostly regarding unused variables but also a missing sentinel to
gtk_dialog_new_with_buttons() and use of the deprecated gtk_hbox_new().
Comment 2 James Liggett 2012-12-01 22:41:32 UTC
Thanks.