git: Fix compile warnings.

Mostly regarding unused variables but also a missing sentinel to
gtk_dialog_new_with_buttons() and use of the deprecated gtk_hbox_new().

https://bugzilla.gnome.org/show_bug.cgi?id=689315